--- a/ch1/ex24/ex24.md
+++ b/ch1/ex24/ex24.md
@@ -1,2 +1,4 @@
-﻿escape문자 - \t,\n,\b 등인데 짝이맞는지 검사할 필요가있나?*/
+	escape문자 - \t,\n,\b 
+등인데 짝이맞는지 검사할 필요가있나?*/
+
 또 인용부호 "와 '의 경우에 시작하는따음표와 마치는 따음표가 다른문자로 지정되어있는건지 궁금
