--- a/ch1/ex13/ex13.md
+++ b/ch1/ex13/ex13.md
@@ -1,1 +1,2 @@
-﻿0값을 가지고 있는 ++s[a-1]를 ++s[a-1]; 하면 0 -> -858993460 이 되는 기괴한 일이 일어나는데 도통이유를 모르겠음
+	s[a-1] =0 , ++s[a-1]; 을 실행시킬경우 0 ->-858993460 
+이 되는 기괴한 일이 일어나는데 왜그런지 모르겠음
