--- a/ch1/ex2/ex02.md
+++ b/ch1/ex2/ex02.md
@@ -1,1 +1,2 @@
-﻿\c \d 와 같이 특별히 어떠한 동작을 하라는 명령어가 아닐경우엔 \뒤의 알파벳이 그대로 출력된다는 사실 발견.
+	\c, \d 
+와 같은 특별히 어떠한 동작을 하라는 명령어가 아닐경우엔 \뒤의 알파벳이 그대로 출력된다는 사실 발견.
