--- a/ch1/ex1/ex01.md
+++ b/ch1/ex1/ex01.md
@@ -1,46 +1,50 @@
-#printf함수에서 문자를 하나씩 뺐을경우
+### printf함수에서 문자를 하나씩 뺐을경우
 
     1>ex01.obj : error LNK2001: unresolved external symbol _prinf
     1>C:\workspace\whitebook\ch1\Debug\ex01.exe : fatal error LNK1120: 1 unresolved externals
 
 print,pintf 이런함수는 찾을수 없다는 뜻?
 
- ---
-
-#main의 소괄호를 뺐을경우
+### main의 소괄호를 뺐을경우
 
     1>c:\workspace\whitebook\ch1\ex1\ex01.c(4) : error C2143: syntax error : missing ')' before '{'
 
- (으로 소괄호가 열린후에 닫아주는 )을 찾을수 없다는 뜻인듯
+(으로 소괄호가 열린후에 닫아주는 )을 찾을수 없다는 뜻인듯
 
----
-
-#main 중에서 문자를 뺐을경우
+### main 중에서 문자를 뺐을경우
 
     1>MSVCRTD.lib(crtexe.obj) : error LNK2019: unresolved external symbol _main referenced in function ___tmainCRTStartup
     1>C:\workspace\whitebook\ch1\Debug\ex01.exe: fatal error LNK1120: 1 unresolved externals
 
 음....... 한개의 해결되지않은 외관? main() {주 프로그램} 이 기본적인 구조가 망가져서?
 
----
-#{}중 한개를 뺐을경우
+> **unresolved externals 라는 에러메시지는 주어진 이름의 함수나 변수를 찾을 수 없을 때 발생합니다. 앞서 같은 에러를 발생시킨 prinf 라는 함수의 경우는 프로그래머가 사용한 함수가 없는 것이었던 반면, 이번에 발생한 에러는 링커가 main 이라는 함수를 찾고 있는데 발견할 수 없다는 뜻입니다. main 과 prinf 모두 앞에 _ 가 추가된 _main 과 _prinf 로 불리고 있음을 눈여겨 보아두도록 하세요.**
+
+### {}중 한개를 뺐을경우
 
     1>c:\workspace\whitebook\ch1\ex1\ex01.c(26) : fatal error C1075: end of file found before the left brace '{' at 'c:\workspace\whitebook\ch1\ex1\ex01.c(4)' was matched
-마찮가지로 { 이후에 }가 없어서 발생한에러?
 
----
-#include 중의 문자를 뺐을경우
+마찬가지로 { 이후에 }가 없어서 발생한에러?
+
+### include 중의 문자를 뺐을경우
+
     1>c:\workspace\whitebook\ch1\ex1\ex01.c(1) : fatal error C1021: invalid preprocessor command 'includ'
+
 includ 라는 커맨드를 찾을수가 없다.
 
----
-# #을 뺐을경우
+### #을 뺐을경우
+
     1>c:\workspace\whitebook\ch1\ex1\ex01.c(1) : error C2143: syntax error : missing '{' before '<'
     1>c:\workspace\whitebook\ch1\ex1\ex01.c(1) : error C2059: syntax error : '<'
+
 {을 찾을수없다? ????
 
----
+> **# 문자가 없으면 include 는 전처리기 명령이 아니라 일반적인 C 식별자로 인식됩니다. 때문에 C 문법에 비추어 볼 때 영 알아들을 수 없는 문장으로 인식하게 됩니다. 이런 경우 나타나는 에러 메시지는 컴파일러가 올바른 문법에 가장 가깝다고 생각하는 경우를 반영하게됩니다. 컴파일러마다 에러 메시지가 조금 다를 수도 있으니 에러 메시지에 너무 집착할 필요는 없습니다. 다만 문법적으로 올바르지 않을 경우 발생하는 메시지들의 유형에 익숙해지고, 그럴 경우 문법적인 오류를 의심할 수 있는 경험은 디버깅에 도움이 됩니다.**
 
-#<>안의 문자를 뺐을경우
+### <>안의 문자를 뺐을경우
+
     1>c:\workspace\whitebook\ch1\ex1\ex01.c(1) : fatal error C1083: Cannot open include file: 'tdio.h': No such file or directory
+
 stdio.h라는 모듈(?)을 호출할수없다
+
+> **컴파일러가 설치된 디렉토리를 잘 찾아보면 stdio.h 라는 이름의 파일을 발견할 수 있습니다. #include 라는 전처리기 명령은 이 파일을 읽어들이는 과정을 포함합니다. 때문에 s 를 지우면 tdio.h 라는 이름의 파일을 읽으려고 시도하게됩니다. 그런 이름의 파일은 없기 때문에 발생하는 에러입니다.**
