--- a/ch1/ex13/ex13.md
+++ b/ch1/ex13/ex13.md
@@ -1,2 +1,7 @@
 	s[a-1] =0 , ++s[a-1]; 을 실행시킬경우 0 ->-858993460 
 이 되는 기괴한 일이 일어나는데 왜그런지 모르겠음
+
+> **좀 더 분명하게 뜻이 전달되도록 써주면 좋겠습니다. 짐작컨데 word 변수 초기화 버그로 인한 현상을 묻고 있는 것으로 추정됩니다. 수정된 소스코드를 참고하세요.**
+
+> **ex13.c 에서 word 변수는 필요없습니다. word == ON 은 a > 0 으로, word == OFF 는 a == 0 으로 대체할 수 있습니다.**
+
