--- a/ch1/ex24/ex24.md
+++ b/ch1/ex24/ex24.md
@@ -1,4 +1,8 @@
 	escape문자 - \t,\n,\b 
-등인데 짝이맞는지 검사할 필요가있나?*/
+등인데 짝이맞는지 검사할 필요가있나?
+
+> **escape 문자의 짝이 맞는지 검사하라는 뜻이 아니라, 검사하는 과정에서 escale 문자에 의해 문맥이 바뀔 수 있음에 주의하라는 뜻.**
 
 또 인용부호 "와 '의 경우에 시작하는따음표와 마치는 따음표가 다른문자로 지정되어있는건지 궁금
+
+> **같은 문자 사용. "로 시작하면 "로 끝나고, '로 시작하면 '로 끝남.**
